--- a/styles.scss
+++ b/styles.scss
@@ -9,16 +9,181 @@
 :root {
     --primary-color: #000;
     --secondary-color: #fff;
+    --box-color: #f5f5f5;
+    --table-even-color: #f0f0f0;
+    --table-odd-color: #a1a1a1;
+    --highlight-color: #ff8c00;
     --primary-font: "Roboto", sans-serif;
-    --secondary-font: "Roboto", sans-serif;
 }
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
+    scroll-snap-align: center;
 }
 
 body {
     font-family: var(--primary-font);
     background-color: var(--secondary-color);
     color: var(--primary-color);
+}
+
+.title {
+    font-family: var(--secondary-font);
+    font-size: 3rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 2rem 0;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    max-width: 120rem;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+
+.box {
+    font-size: large;
+    background-color: var(--box-color);
+    color: var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin: 3rem;
+    padding: 2rem;
+    border-radius: 1rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+
+    & > * {
+        margin: 1rem 0;
+    }
+
+    & table {
+        border-collapse: collapse;
+        width: 80%;
+        margin: 1rem 0;
+
+        & th,
+        & td {
+            border: 1px solid var(--primary-color);
+            padding: 0.5rem;
+        }
+
+        & th {
+            background-color: var(--highlight-color);
+            color: var(--secondary-color);
+        }
+
+        & tr:nth-child(even) {
+            background-color: var(--box-color);
+        }
+
+        & tr:nth-child(odd) {
+            background-color: var(--secondary-color);
+        }
+    }
+}
+
+.highlight {
+    color: var(--highlight-color);
+    font-weight: bold;
+    letter-spacing: 0.2rem;
+}
+
+.sources {
+    font-size: 1.4rem;
+    text-align: center;
+    margin-top: 2rem;
+
+    a {
+        color: var(--highlight-color);
+        text-decoration: none;
+        font-weight: bold;
+    }
+}
+.menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 2rem;
+    width: 10vw;
+    background-color: var(--box-color);
+    border-radius: 0 0 0 1rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    word-wrap: break-word;
+    line-height: 1.5;
+
+    a {
+        display: block;
+        margin: 1rem 0;
+        color: var(--primary-color);
+        text-decoration: none;
+        font-size: 1.4rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 0.2rem;
+        transition: all 0.1s ease-in-out;
+
+        &:hover {
+            color: var(--highlight-color);
+        }
+    }
+}
+
+footer {
+    background-color: var(--box-color);
+    padding: 3rem;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: bold;
+    letter-spacing: 0.2rem;
+    color: var(--primary-color);
+
+    a {
+        color: var(--highlight-color);
+        text-decoration: none;
+    }
+
+    & > * {
+        margin: 1rem 0;
+    }
+}
+
+#alku {
+    padding-bottom: 2rem;
+}
+
+@media screen and (max-width: 1450px) {
+    .container {
+        max-width: 75rem;
+    }
+
+    .menu {
+        width: 15vw;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .container {
+        max-width: 50rem;
+    }
+
+    .menu {
+        width: 20vw;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .menu {
+        display: none;
+    }
 }
